--- a/recipes/openexr/2.3.0/conandata.yml
+++ b/recipes/openexr/2.3.0/conandata.yml
@@ -6,3 +6,5 @@ patches:
   "2.3.0":
     - patch_file: "patches/IlmImf__ImfSystemSpecific.cpp.patch"
       base_path: "source_subfolder/OpenEXR"
+    - patch_file: "patches/v2.3.0.patch"
+      base_path: "source_subfolder"
