--- a/recipes/openexr/config.yml
+++ b/recipes/openexr/config.yml
@@ -1,7 +1,7 @@
 versions:
   "2.3.0":
-    folder: "2.3.0"
+    folder: "all"
   "2.4.0":
-    folder: "2.x"
+    folder: "all"
   "2.5.2":
-    folder: "2.x"
+    folder: "all"
